--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "apscheduler>=3.11.2",
     "fastapi>=0.128.0",
     "selenium>=4.40.0",
     "uvicorn>=0.40.0",
+    "webdriver-manager>=4.0.2",
 ]
